# htmlstream

./: .gitignore  README.rst  pylintrc  pyproject.toml
.github/workflows/: python-publish.yml  test-python-publish.yml
src/htmlstream/: cursor.py
tests/data/: deep_text.html  small.html
